buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'org.springframework.boot' version "${springBoot}" apply false
}

apply plugin: 'io.spring.dependency-management'

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll([
            '--add-exports', 'java.base/sun.security.x509=ALL-UNNAMED'
    ])
}

tasks.withType(JavaExec).configureEach {
    jvmArgs.addAll([
            '--add-exports', 'java.base/sun.security.x509=ALL-UNNAMED'
    ])
}

// also https://stackoverflow.com/questions/28404149/how-to-download-javadocs-and-sources-for-jar-using-gradle-2-0
eclipse {
    classpath {
        downloadSources = true
    }
}
// read more about idea plugin in https://docs.gradle.org/current/userguide/idea_plugin.html
idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}
project.group = "com.javatmp.demo"
project.version = "0.0.1"

allprojects {
    group = project.group
    version = project.version

    java {
        sourceCompatibility = JavaLanguageVersion.of(23)
        targetCompatibility = JavaLanguageVersion.of(23)
        toolchain {
            languageVersion = JavaLanguageVersion.of(23) // or your desired version
        }
    }

}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
//    apply plugin: 'java-library'
    apply plugin: 'java'

    repositories {
        mavenLocal()
        mavenCentral()
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-log4j2'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        implementation 'jakarta.xml.bind:jakarta.xml.bind-api'
        implementation 'org.glassfish.jaxb:jaxb-runtime'

    }

    configurations {
        all {
            // https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#howto-configure-log4j-for-logging
            // https://stackoverflow.com/questions/59629214/caused-by-org-apache-logging-log4j-loggingexception-log4j-slf4j-impl-cannot-be
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    bootJar {
        enabled = false
//        mainClass = ''
    }

    // Skips tests if you do not provide prod project property from command line
    // ex: `./gradlew build -Pprod`
//    tasks.named('test') {
//        onlyIf {
//            project.hasProperty('prod')
//        }
//    }

}
//
//test {
//    exclude 'com/javatmp/**/*'
//}
//test {
//    exclude '**/*'
//}
//
//test.onlyIf { false == true }
